# xbl-deb

./: INSTALL  Makefile.in  README  Xbl.ad  Xbl.iafa  Xbl.lsm  bl.c  bl.h  bloc.c  bloc.h  buttons.c  buttons.h  change-version.py  configure  configure.in  define.h  demo.c  draw.c  draw.h  gameevent.c  help.c  icone.h  initbloc.c  initbuffer.c  initdisp.c  initgc.c  initmenu.c  initwin.c  keyid.h  loop.c  menu.c  menu.h  movingbloc.c  movingbloc.h  movingbutton.c  movingbutton.h  opbloc.c  opt.h  options.c  options.h  (+15 more)
debian/: NEWS  README.Debian  changelog  control  copyright  doc-base  files  menu  rules  xbl.install
debian/patches/: desktop.diff  series  set_wm_class.diff
debian/source/: include-binaries
